@@ -1,3 +1,13 @@
+2012-11-05  Mark Lam  <mark.lam@apple.com>
+
+        Fixed flaky fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html.
+        https://bugs.webkit.org/show_bug.cgi?id=101268.
+
+        Reviewed by Geoffrey Garen.
+
+        * fast/xmlhttprequest/xmlhttprequest-recursive-sync-event-expected.txt:
+        * fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html:
+
 2012-11-05  Philip Rogers  <pdr@google.com>
 
         Unblock SVG external references
